# LIA-Colombo-AI

./: .gitignore  README.md  SETUP.md  app.py  app_new.py  pyproject.toml
data/chroma_db/625cc575-20aa-45fe-ad4d-f32f85f1dd8a/: index_metadata.pickle
src/: 01_diagnostico_libro.py  02_extraer_texto_ocr.py  03_entrenar_memoria_rag.py  04_abrir_tunel.py  05_motor_proactivo.py  06_servidor_interactivo.py  abrir_tunel.py  bot_lia.py  cerebro_lia.py  config.py  document_loader.py  embeddings.py  generador_mensajes.py  iniciar_conversacion.py  leer_listas.py  lia_automatizada.py  libro_texto.txt  llm_chain.py  probar_lectura.py  procesar_libro_ocr.py  servidor_whatsapp.py
